backend/k8s/eks-alb-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: codecourt-eks-ingress
  namespace: codecourt
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS": 443}]'
spec:
  rules:
    - http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: codecourt-api-service
                port:
                  number: 5000
          - path: /
            pathType: Prefix
            backend:
              service:
                name: codecourt-frontend-service
                port:
                  number: 3000
